public/CSS/style.css
@import url(variables.css);

html, body {
    margin: 0;
    padding: 0;
}

body {
    background-color: var(--background-colour);
}

html, body, #page {
    width: 100%;
    height: 100%;
}

#page {
    display: flex;
    justify-content: center;
    align-items: center;
}

#loginForm {
    background-color: var(--background-colour-darker);

    width: 330pt;

    margin: var(--margin-normal);
    padding: var(--padding-big);
    
    border: var(--border-thickness) var(--border-style) var(--border-not-hovering-colour);
    border-radius: var(--border-radius-normal);
    
    display: flex;
    flex-direction: column;
    gap: var(--margin-normal);

    transition: all var(--transition-duration) var(--transition-timing-function);
}

#loginForm:hover {
    border-color: var(--border-hovering-colour);
}

@media screen and (width <= 450px) and (orientation: portrait) {
    #loginForm {
        width: calc(100% - var(--border-thickness)*2);
    }
}

#loginForm > fieldset {
    border: none;

    margin: 0;
    padding: 0;
    
    display: flex;
    flex-direction: column;
    gap: var(--margin-small);

    font-family: var(--font-monospace);
    font-size: var(--font-size-normal);

    color: var(--font-colour-normal);

    div {
        margin-bottom: var(--margin-smaller);
        
        width: 100%;

        h1 {
            margin: 0;
            
            font-family: inherit;
            font-size: var(--font-size-title-big);

            color: inherit;
        }

        span {
            font-family: inherit;
            font-size: var(--font-size-small);
            font-style: italic;

            color: inherit;

            a {
                font-family: inherit;
                font-size: inherit;
                font-style: italic;

                color: var(--font-colour-discrete);
            }
        }
    }

    img {
        max-height: 3.2rem;

        border-radius: 50%;

        aspect-ratio: 1;
    }

    label {
        padding-left: var(--padding-small);

        font-family: inherit;
        font-size: inherit;
        
        text-decoration: underline;
        text-decoration-color: var(--font-colour-discrete);
    }

    input {
        padding: var(--padding-small);

        border: var(--border-thickness-thin) var(--border-style) var(--border-colour);
        border-radius: var(--border-radius-small);

        font-family: inherit;
        font-size: inherit;

        color: inherit;

        background-color: var(--input-not-hovering-background-colour);

        transition: all var(--transition-duration) var(--transition-timing-function);
    }

    input:not([type=submit]):not(.invalid):valid {
        border-color: var(--accent-lighter);
    }

    input:is(.invalid) {
        border-color: var(--error-red);
    }

    input[type=submit] {
        padding-left: var(--padding-normal);
        padding-right: var(--padding-normal);

        width: fit-content;
        
        border-width: var(--border-thickness);

        text-decoration-color: var(--error-red);

        cursor: pointer;
    }

    input[type=submit]:is(.validInputs) {
        border-color: var(--border-colour);
    }

    input[type=submit]:not(.validInputs):hover {
        border-color: var(--error-red);

        text-decoration: line-through;
        text-decoration-color: var(--error-red);
        text-decoration-thickness: 2pt;
    }

    input:hover {
        background-color: var(--input-hovering-background-colour);
    }

    #loginFormError {
        font-size: var(--font-size-smaller);

        color: var(--error-red);
    }

    fieldset {
        padding: 0;

        border: none;

        display: flex;
        gap: var(--margin-smaller);

        input {
            width: 100%;
        }

        #loginFormPasswordReveal {
            background-color: var(--input-not-hovering-background-colour);
    
            border: var(--border-thickness-thin) var(--border-style) var(--border-not-hovering-colour-dark);
            border-radius: var(--border-radius-small);

            padding: 0;

            display: flex;
            justify-content: center;
            align-items: center;

            aspect-ratio: 1;

            cursor: pointer;

            transition: all var(--transition-duration) var(--transition-timing-function);

            img {
                max-width: 75%;
                height: 75%;

                filter: brightness(calc(187/255));

                transition: all var(--transition-duration) var(--transition-timing-function);
            }
        }
    
        #loginFormPasswordReveal:hover {
            background-color: var(--input-hovering-background-colour);

            border-color: var(--border-hovering-colour-dark);

            img {
                filter: brightness(1);
            }
        }
    }
}

#loginForm > fieldset:first-of-type {
    flex-direction: row;
    align-items: center;
}

#loginForm > fieldset:last-of-type {
    align-items: center;
}

#loginForm > fieldset:has(#loginFormError) {
    align-items: center;
}

#navigation, #editor, #settings {
    height: calc(100% - var(--margin-normal)*2);

    margin: var(--margin-normal);

    background-color: var(--background-colour-darker);

    border: var(--border-thickness) var(--border-style-sub) var(--border-not-hovering-colour-dark);

    font-family: var(--font-monospace);
    color: var(--font-colour-normal);

    box-sizing: border-box;

    transition: all var(--transition-duration) var(--transition-timing-function);
}

#navigation:hover {
    border-color: var(--accent-light);
}

#editor:hover, #settings:hover {
    border-color: var(--border-hovering-colour-dark);
}

#navigation {
    width: 15%;
    min-width: 180pt;
    max-width: 280pt;
    height: calc(100% - var(--margin-normal)*2);

    margin-right: var(--margin-small);
    padding: var(--padding-normal);

    display: flex;
    flex-direction: column;
    gap: var(--margin-smaller);

    overflow-y: auto;

    button {
        background-color: var(--background-colour-darker);

        padding: var(--padding-small) calc(var(--padding-smaller) + (var(--padding-normal) - var(--padding-smaller))/2) var(--padding-small) var(--padding-smaller);

        border: var(--border-thickness) var(--border-style) var(--border-not-hovering-colour);
        border-radius: var(--border-radius-small);

        display: grid;
        grid-template-columns: min-content auto;
        align-items: center;
        gap: var(--margin-smaller);

        font-family: inherit;
        font-size: var(--font-size-normal);
        font-style: oblique 0.01deg;
        color: inherit;

        cursor: pointer;

        transition: all var(--transition-duration) var(--transition-timing-function);

        span {
            font-size: inherit;
            text-align: left;
            text-wrap: nowrap;
            text-overflow: ellipsis;

            overflow: hidden;
        }
    }

    button:hover {
        border-color: var(--border-hovering-colour);

        font-style: oblique var(--font-lean);
    }

    #navigationEditor:hover {
        border-color: var(--accent);
    }

    #navigationSettings:hover {
        border-color: var(--navigation-a-colour);
    }

    #navigationLogout:hover {
        border-color: var(--error-red);
    }

    #navigationFiles {
        height: 100%;

        display: flex;
        flex-direction: column;
        gap: var(--margin-smaller);

        button {
            border-style: var(--border-style-sub);

            height: min-content;

            cursor: pointer;
        }

        #navigationNewFile:hover {
            border-color: var(--accent-lighter);
        }
    }

    section {
        border-top: var(--border-thickness) var(--border-style-sub) var(--border-not-hovering-colour-dark);

        padding-top: var(--padding-smaller);

        display: grid;
        grid-auto-rows: calc(var(--padding-small)*2 + 2px*2 + 18pt);
        gap: var(--margin-smaller);

        transition: all var(--transition-duration) var(--transition-timing-function);

        div:not(.profileImageContainer) {
            padding: 0 var(--padding-small);

            display: grid;
            grid-template-columns: calc(var(--padding-small)*2 + 2px*2 + 18pt) auto;
            grid-template-rows: calc(var(--padding-small)*2 + 2px*2 + 18pt);
            gap: var(--margin-smaller);
            align-items: center;
            
            div:is(.profileImageContainer) {
                display: flex;
                justify-content: center;
                
                img {
                    width: 90%;

                    object-fit: cover;

                    aspect-ratio: 1;
                }
            }

            span {
                display: initial;

                font-size: var(--font-size-smaller);
                font-weight: bold;
                text-align: left;

                text-wrap: nowrap;
                text-overflow: ellipsis;
                
                overflow: hidden;
            }
        }
    }

    section:hover {
        border-color: var(--accent-light);
    }
}

#editor, #settings {
    width: 100%;

    border-style: var(--border-style);
}

#editor {
    display: flex;
}

#settings {
    display: none;
}

#logout {
    background-color: #00000088;

    width: 100%;
    height: 100%;

    position: fixed;

    display: none;
    justify-content: center;
    align-items: center;

    font-family: var(--font-monospace);
    font-size: var(--font-size-normal);
    color: var(--font-colour-normal);

    z-index: 100;

    div {
        background-color: var(--background-colour-dark);

        padding: var(--padding-big);

        border: var(--border-thickness) var(--border-style-sub) var(--error-red);
        border-radius: var(--border-radius-normal);

        div {
            margin-top: var(--margin-normal);
            padding: 0;

            border: none;

            display: flex;
            justify-content: center;
            align-items: center;
            gap: var(--margin-normal);
            
            button {
                background-color: var(--background-colour-dark);

                width: 30%;

                padding: calc(var(--padding-small)/2);

                border: var(--border-thickness) var(--border-style) var(--border-not-hovering-colour-dark);
                border-radius: var(--border-radius-small);

                font-family: inherit;
                font-size: var(--font-size-smaller);
                color: inherit;

                cursor: pointer;

                transition: all var(--transition-duration) var(--transition-timing-function);
            }

            button:hover {
                border-color: var(--border-hovering-colour);
            }

            #logoutConfirm:hover {
                border-color: var(--error-red);
            }
        }
    }
}

